# xtsci-optimize

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  meson.build  meson_options.txt  pixi.toml  readme.org  towncrier.toml
CppCore/: meson.build  tiny_cli.cpp
CppCore/include/: xtensor_fmt.hpp  xtensor_trial_funcs.hpp
CppCore/tests/: test_armijo.cc  test_backtracking.cc  test_bisection.cc  test_curvature.cc  test_optim_bfgs.cc  test_optim_cg.cc  test_optim_lbfgs.cc  test_optimizable.cc  test_trial_funcs.cc  test_wolfe.cc
CppCore/xtsci/: helpers.hpp
CppCore/xtsci/optimize/: base.cc  base.hpp  numerics.hpp  optimizable.hpp
CppCore/xtsci/optimize/linesearch/: base.hpp
CppCore/xtsci/optimize/linesearch/conditions/: armijo.hpp  curvature.hpp  goldstein.hpp  wolfe.hpp
CppCore/xtsci/optimize/linesearch/conjugacy/: conjugate_descent.hpp  dai_yuan.hpp  fletcher_reeves.hpp  fr_pr.hpp  hager_zhang.hpp  hestenes-stiefel.hpp  hybridized_conj.hpp  liu_storey.hpp  polak_ribiere.hpp
CppCore/xtsci/optimize/linesearch/search_strategy/: backtracking.hpp  bisection.hpp  moore_thuente.hpp  zoom.hpp
CppCore/xtsci/optimize/linesearch/step_size/: bisect.hpp  cubic.hpp  geom.hpp  golden.hpp  hermite.hpp  quadratic.hpp  secant.hpp
CppCore/xtsci/optimize/minimize/: adam.hpp  bfgs.hpp  cg.hpp  lbfgs.cc  lbfgs.hpp  nlcg.hpp  pso.hpp  sd.hpp  sr1.hpp  sr2.hpp
CppCore/xtsci/optimize/nlcg/: base.hpp
CppCore/xtsci/optimize/nlcg/conjugacy/: dai_yuan.hpp  (+8 more)
CppCore/xtsci/optimize/trial_functions/: eggholder.hpp  himmelblau.hpp  mullerbrown.hpp  quadratic.hpp  rosenbrock.hpp
(+17 files in other folders)
